# cpp-training-projects

avia_dispatcher/: CMakeLists.txt
avia_dispatcher/core/include/: flight.h
avia_dispatcher/core/src/: flight.cpp  main.cc
avia_dispatcher/tests/: test_flight.cc
books/accelerated_cpp/main_project/: CMakeLists.txt
books/accelerated_cpp/main_project/include/: grader_util.h  student_info.h
books/accelerated_cpp/main_project/src/: grader_util.cpp  main.cpp  student_info.cpp
books/accelerated_cpp/main_project/tests/: tests.cpp
chess/: CMakeLists.txt
chess/core/include/: board.h  piece.h
chess/core/src/: main.cc
core/src/: board.cc  main.cc
courses/cs_107/lectures_ex/lec_13/: ex_3.c
courses/cs_107/lectures_ex/lec_3/: struct.c
courses/cs_107/lectures_ex/lec_4/: generic_swap.c
courses/cs_107/programming_assignments/3_vector_hashset/hash_cv/src/: hashset.c
courses/cs_107/programming_assignments/3_vector_hashset/stack_cv/: CMakeLists.txt
courses/cs_107/programming_assignments/3_vector_hashset/stack_cv/include/: stack.h  tests.h
courses/cs_107/programming_assignments/3_vector_hashset/stack_cv/src/: main.c  stack.c  tests.c
courses/cs_107/programming_assignments/3_vector_hashset/vector_cv/: CMakeLists.txt
courses/cs_107/programming_assignments/3_vector_hashset/vector_cv/src/: vectortest.c
courses/cs_107/section_assignments/sa_3/multitable/include/: multitable.h
courses/cs_107/section_assignments/sa_3/multitable/src/: main.c  multitable.c
courses/cs_107/section_assignments/sa_3/ssa/include/: ssa.h
courses/cs_107/section_assignments/sa_3/ssa/src/: main.c
date/: CMakeLists.txt
date/include/: date.h
date/src/: date.cpp  main.cpp
date/tests/: test_date.cpp
hash_cv/: CMakeLists.txt
hash_cv/include/: hashset.h
hash_cv/src/: hashset.c  hashsettest.c  main.c  streamtokenizer.c  vector.c
icu/src/: main.cc
matrix/: CMakeLists.txt
matrix/core/: main.cc
matrix/core/include/: matrix.h
matrix/core/src/: main.cc
matrix/include/: matrix.h
programming_paradigms/Assignments/programming_assignments/3_vector_hashset/hash_cv/src/: main.c  thesaurus-lookup.c
programming_paradigms/Assignments/programming_assignments/3_vector_hashset/vector_cv/src/: main.c
programming_paradigms/Assignments/section_assignments/3_ssa/: CMakeLists.txt
programming_paradigms/Assignments/section_assignments/3_ssa/src/: main.c  ssa.c  vector.c
programming_paradigms/Assignments/section_assignments/sa_3/multitable/: CMakeLists.txt
programming_paradigms/Assignments/section_assignments/sa_3/ssa/src/: ssa.c  vector.c
programming_paradigms/lectures_ex/lec_13/: memcmp_ex.c  strlen_ex.c
programming_paradigms/lectures_ex/lec_14/: array_stack.c
programming_paradigms/lectures_ex/lec_4/: generic_swap
programming_paradigms/lectures_ex/lec_5/: linear_search.c
sanbox/json_parser/: CMakeLists.txt  data.txt  main.cc
tropical/: CMakeLists.txt  Test_Tasks.cpp  main.cpp  max_algebra.cpp  max_algebra.h
tropical/include/: ahp_decision_method.h  decision.h  decision_method.h  gm_decision_method.h  heuristic_decision_method.h  max_algebra.h  method.h  tropical.h  tropical_decision_method.h
tropical/src/: ahp_decision_method.cpp  decision.cpp  gm_decision_method.cpp  heuristic_decision_method.cpp  main.cpp  method.cpp  tropical.cpp  tropical_decision_method.cpp
tropical/tests/: ahp_tasks_tests.cpp  gm_tasks_tests.cpp  tropical_tasks_tests.cpp  tropical_tests.cpp  tropical_utils.h
vector/: CMakeLists.txt
vector/core/include/: vector.h
vector/core/src/: main.cc
vector/tests/: test_vector.cc
vector_cv/: CMakeLists.txt
vector_cv/include/: vector.h
vector_cv/src/: main.c  vector.c
